# Test

./: .gitignore  Makefile  Makefile.am  Makefile.am.bak  Makefile.in  README.md  SingletonHolder.h  config.h  config.status  configure  configure.ac  configure.scan  hash_map.h  hello  hello.cpp  hello.cpp.cdepn  hello.h  hello.out  hello.out.in  hello.out.po  log.cpp  log.h  log_def.h  log_warp.h  my.prof  my.vim  my.viminf  student.cpp  student.h  task.cpp  task.h  tconn.cpp  tconn.h  test.cpp  test.h  tree.cpp  tree.cpp.cdepn  tree.h
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
td/: td.cpp  td.cpp.cdepn  td.h
